(feat) header.menu - add styles for title and create icon

--- a/index.html
+++ b/index.html
@@ -212,10 +212,15 @@
                             </div>
                         </div>
                         <div class="menu">
-                            <a class="menu__header" href="#!">
-                                <span >Меню</span>
-                            </a>
-                            
+                            <button href="#!" class="menu__icon">
+                                <span class="bold-line"></span>
+                                <span class="bold-line"></span>
+                                <span class="bold-half-line"></span>
+                            </button>
+                            <button href="#!" class="menu__title">
+                                Меню
+                            </button>
+
                         </div>
                     </div>
 
