(feat) footer - scroll hint block

--- a/index.html
+++ b/index.html
@@ -233,7 +233,24 @@
         </section>
 
         <footer class="footer">
-            footer
+            <div class="footer__content">
+                <div class="hint-scroll">
+                    <div class="mouse-block">
+                        <div class="mouse"></div>
+                    </div>
+                    <div class="hint-scroll__title">
+                        <span class="small-text">Scroll down to see new options</span>
+                    </div>
+                </div>
+                <div class="adding-info">
+                    <div class="adding-info__copyright-block">
+                        <span class="small-text">Copyright AI People</span>
+                    </div>
+                    <div class="adding-info__mail">
+                        <address>info@aipeople.com</address>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     </div>
