(feat) footer - addition info block

--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
                         <span class="small-text">Scroll down to see new options</span>
                     </div>
                 </div>
-                <div class="adding-info">
-                    <div class="adding-info__copyright-block">
-                        <span class="small-text">Copyright AI People</span>
+                <div class="adding-info-block">
+                    <div class="adding-info-block__copyright-block">
+                        <span class="small-text">Copyright AI People 2019</span>
                     </div>
-                    <div class="adding-info__mail">
-                        <address>info@aipeople.com</address>
+                    <div class="adding-info-block__mail-block">
+                        <address class="mail-text">info@aipeople.com</address>
                     </div>
                 </div>
             </div>
