(feat) scroll-block - add aside with scroll

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="menu">
+                        <nav class="menu">
                             <button href="#!" class="menu__icon">
                                 <span class="bold-line"></span>
                                 <span class="bold-line"></span>
@@ -221,12 +221,22 @@
                                 Меню
                             </button>
 
-                        </div>
+                        </nav>
                     </div>
 
                 </div>
+            </header>
         </div>
-        </header>
+
+        <aside class="scroll-block">
+            <div class="scroll-block__current-page">
+                <span class="scroll-bloc__text">01</span>
+            </div>
+            <div class="scroll-block__progress-bar"></div>
+            <div class="scroll-block__last-page">
+                <span class="scroll-bloc__text">04</span>
+            </div>
+        </aside>
 
         <section class="s-main">
 
