(feat) overlay - add main of overlay menu

--- a/index.html
+++ b/index.html
@@ -263,8 +263,42 @@
             </div>
         </footer>
     </div>
-    </div>
 
+    <div class="overlay">
+        <div class="overlay__close-block">
+            <button class="close-btn"></button>
+        </div>
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-7">
+                <div class="col">
+                    <nav class="overlay__menu">
+                        <div class="overlay__menu__item">
+                            <a href="#!" class="big-link-text"><span class="big-link-text">Главная</span></a>
+                        </div>
+                        <div class="overlay__menu__item">
+                            <a href="#!" class="big-link-text">Вакансии</a>
+                        </div>
+                        <div class="overlay__menu__item">
+                            <a href="#!" class="big-link-text">Команда</a>
+                        </div>
+                        <div class="overlay__menu__item">
+                            <a href="#!" class="big-link-text">Контакты</a>
+                        </div>
+                        <div class="overlay__menu__social">
+                            <a href="#!" class="small-link-text">VK</a>
+                        </div>
+                        <div class="overlay__menu__social">
+                            <a href="#!" class="small-link-text">Instagram</a>
+                        </div>
+                        <div class="overlay__menu__social">
+                            <a href="#!" class="small-link-text">Facebook</a>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 
