(feat/chore) adaptation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <!-- <link href="img/favicon.png" rel="icon">
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
+    <script defer src="js/main.js"></script>
+    
     <link href="libs/bootstrap-grid.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -20,8 +21,8 @@
     <div class="container-fluid">
         <div class="row content">
             <header class="header">
-                <div class="row">
-                    <div class="col-md-6 header__left">
+                <div class="header-wrapper">
+                    <div class="header__left">
                         <div class="header__logo">
                             <h3 class="header__logo__text">ai people</h3>
                         </div>
@@ -30,7 +31,7 @@
                             <button class="button-text">eng</button>
                         </div>
                     </div>
-                    <div class="col-md-6 header__right">
+                    <div class="header__right">
                         <div class="socials">
                             <div class="socials__header">
                                 <span class="text-with-line">Follow US</span>
@@ -265,8 +266,8 @@
     <div class="overlay" id="overlay">
         <div class="row overlay-content">
             <div class="overlay__header">
-                <div class="row">
-                    <div class="col-md-6 header__left">
+                <div class="header-wrapper">
+                    <div class="header__left">
                         <div class="header__logo">
                             <h3 class="header__logo__text">ai people</h3>
                         </div>
@@ -275,7 +276,7 @@
                             <button class="button-text">eng</button>
                         </div>
                     </div>
-                    <div class="col-md-6 header__right">
+                    <div class="header__right">
                         <div class="socials socials_white">
                             <div class="socials__header">
                                 <span class="text-with-line text-with-line_white">Follow US</span>
@@ -463,8 +464,8 @@
 
                 </div>
             </div>
-            <div class="col-md-5"></div>
-            <div class="col-md-7">
+            <div class="col-md-5 col-sm-1"></div>
+            <div class="col-md-7 col-sm-12">
                 <div class="col">
                     <nav class="overlay__menu">
                         <div class="overlay__menu__main-list">
@@ -499,10 +500,8 @@
                 <div class="footer__content">
                     <div class="hint-scroll">
                         <div class="mouse-block">
-                            <!-- <div class="mouse"></div> -->
                         </div>
                         <div class="hint-scroll__title">
-                            <!-- <span class="small-text">Scroll down to see new options</span> -->
                         </div>
                     </div>
                     <div class="adding-info-block">
@@ -518,7 +517,7 @@
         </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    
 </body>
 
 </html>
