(feat) page 1 - added content and started to stylize left block

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <link href="img/favicon.png" rel="icon">
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
     <script defer src="js/main.js"></script>
-    
+
     <link href="libs/bootstrap-grid.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -238,7 +238,26 @@
         </aside>
 
         <section class="s-main">
-
+            <div class="row content">
+                <div class="col-md-6 s-main__left-block">
+                    <div class="s-main__links-block">
+                        <div class="s-main__link-lock__item">
+                            <a href="#!" class="link">Наша команда</a>
+                        </div>
+                        <div class="s-main__link-lock__item">
+                            <a href="#!" class="link">Контакты</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 s-main__right-block">
+                    <h5>ai people</h5>
+                    <h4>лучшее людям</h4>
+                    <h2>лучшее в современном IT</h2>
+                    <p>Мы осуществляем поиск и оценку специалистов ITобласти, с дальнейшим обучением и интеграцией в 8
+                        компаний, работающих в области AI, Machine Learning, Data Science, Fintech.</p>
+                    <p>Если вы в поисках работы по душе и готовы к следующему шагу, вам у нас будет интересно.</p>
+                </div>
+            </div>
         </section>
 
         <footer class="footer">
@@ -515,9 +534,8 @@
                 </div>
             </div>
         </div>
-        </div>
     </div>
-    
+
 </body>
 
 </html>
