--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         <section class="s-main">
             <div class="row content">
-                <div class="col-md-6 s-main__left-block">
+                <div class="col-md-6 col-sm-12 s-main__left-block">
                     <div class="s-main__links-block">
                         <div class="s-main__link-lock__item">
                             <a href="#!" class="link">Наша команда</a>
@@ -249,10 +249,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 s-main__right-block">
-                    <h5>ai people</h5>
-                    <h4>лучшее людям</h4>
-                    <h2>лучшее в современном IT</h2>
+                <div class="col-md-6 col-sm-12 s-main__right-block">
+                    <h5>Ai people</h5>
+                    <h4>Лучшее людям</h4>
+                    <h2>Лучшее в современном IT</h2>
                     <p>Мы осуществляем поиск и оценку специалистов ITобласти, с дальнейшим обучением и интеграцией в 8
                         компаний, работающих в области AI, Machine Learning, Data Science, Fintech.</p>
                     <p>Если вы в поисках работы по душе и готовы к следующему шагу, вам у нас будет интересно.</p>
