--- a/index.html
+++ b/index.html
@@ -262,6 +262,31 @@
             </div>
         </section>
 
+<section class="s-main">
+            <div class="row content">
+                <div class="col-md-6 col-sm-12 s-main__left-block">
+                    <div class="s-main__links-block">
+                        <div class="s-main__link-lock__item">
+                            <a href="#!" class="link link_with-triangle">Наша команда</a>
+                        </div>
+                        <div class="s-main__link-lock__item">
+                            <a href="#!" class="link link_with-dots">Контакты</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 s-main__right-block">
+                    <h5 class="very-small-text-header">ai people</h5>
+                    <h4 class="small-text-header">Лучшее людям</h4>
+                    <h2 class="text-header">Лучшее в современном IT</h2>
+                    <p class="paragraph">Мы осуществляем поиск и оценку специалистов IT области, с дальнейшим обучением и интеграцией в 8 компаний, работающих в области AI, Machine Learning, Data Science, Fintech.</p>
+                    <p class="paragraph">Если вы в поисках работы по душе и готовы к следующему шагу, вам у нас будет интересно.</p>
+                    <div class="block-with-right">
+                        <button type="button" class="button">вакансии</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <footer class="footer">
             <div class="footer__content">
                 <div class="hint-scroll">
