(new) s-vacancy - added markup for section "s-vacancy"

--- a/index.html
+++ b/index.html
@@ -262,19 +262,40 @@
             </div>
         </section>
 
-<section class="s-main">
+<section class="s-vacancy">
             <div class="row content">
-                <div class="col-md-6 col-sm-12 s-main__left-block">
-                    <div class="s-main__links-block">
-                        <div class="s-main__link-lock__item">
-                            <a href="#!" class="link link_with-triangle">Наша команда</a>
-                        </div>
-                        <div class="s-main__link-lock__item">
-                            <a href="#!" class="link link_with-dots">Контакты</a>
-                        </div>
-                    </div>
+                <div class="col-md-6 col-sm-12 s-vacancy__left-block">
+                    <h2 class="s-vacancy__header">выберите категорию</h2>
+                    <p class="s-vacancy__subheader">Найдите интересующий раздел</p>
+                    <div class="s-vacancy__category">
+                        <input type="checkbox" id="development" name="development"
+                               checked>
+                        <label for="development">Разработка</label>
+                      </div>
+                      
+                      <div class="s-vacancy__category">
+                        <input type="checkbox" id="hr" name="hr">
+                        <label for="hr">HR</label>
+                      </div>
+                      
+                      <div class="s-vacancy__category">
+                        <input type="checkbox" id="product" name="product">
+                        <label for="product">Продукт</label>
+                      </div>
+
+                      <div class="s-vacancy__category">
+                        <input type="checkbox" id="vacancies" name="vacancies">
+                        <label for="vacancies">Поледние вакансии</label>
+                      </div>
+
+                      <p class="s-vacancy__additional">
+                          Не нашел вакансию? Жми <a href="#!">сюда</a>
+                      </p>
+                      <div class="s-vacancy__transitions">
+                          <button class="button-arrow button-arrow__right" type="button">далее</button>
+                      </div>
                 </div>
-                <div class="col-md-6 col-sm-12 s-main__right-block">
+                <!-- <div class="col-md-6 col-sm-12 s-main__right-block">
                     <h5 class="very-small-text-header">ai people</h5>
                     <h4 class="small-text-header">Лучшее людям</h4>
                     <h2 class="text-header">Лучшее в современном IT</h2>
@@ -283,7 +304,7 @@
                     <div class="block-with-right">
                         <button type="button" class="button">вакансии</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
 
