(new) s-vacancy - minor changes

--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
                     <p class="paragraph">Мы осуществляем поиск и оценку специалистов IT области, с дальнейшим обучением и интеграцией в 8 компаний, работающих в области AI, Machine Learning, Data Science, Fintech.</p>
                     <p class="paragraph">Если вы в поисках работы по душе и готовы к следующему шагу, вам у нас будет интересно.</p>
                     <div class="block-with-right">
-                        <button type="button" class="button">вакансии</button>
+                        <a href="#s-vacancy" class="button">вакансии</a>
                     </div>
                 </div>
             </div>
         </section>
 
-<section class="s-vacancy">
+<section class="s-vacancy" id="s-vacancy">
             <div class="row content">
                 <div class="col-md-6 col-sm-12 s-vacancy__left-block">
                     <h2 class="s-vacancy__header">выберите категорию</h2>
