(new) s-vacancy - stylize combobox

--- a/index.html
+++ b/index.html
@@ -268,24 +268,32 @@
                     <h2 class="s-vacancy__header">выберите категорию</h2>
                     <p class="s-vacancy__subheader">Найдите интересующий раздел</p>
                     <div class="s-vacancy__category">
-                        <input type="checkbox" id="development" name="development"
-                               checked>
-                        <label for="development">Разработка</label>
+
+                        <div class="checkbox">
+                                <input class="checkbox__input" id="checkboxDev" type="checkbox" name="checkboxDev">
+                                <label class="checkbox__label" for="checkboxDev">Разработка</label>
+                            </div>
                       </div>
                       
                       <div class="s-vacancy__category">
-                        <input type="checkbox" id="hr" name="hr">
-                        <label for="hr">HR</label>
+                        <div class="checkbox">
+                            <input class="checkbox__input" id="checkboxHR" type="checkbox" name="checkboxHR">
+                            <label class="checkbox__label" for="checkboxHR">HR</label>
+                        </div>
                       </div>
                       
                       <div class="s-vacancy__category">
-                        <input type="checkbox" id="product" name="product">
-                        <label for="product">Продукт</label>
+                            <div class="checkbox">
+                                <input class="checkbox__input" id="checkboxProduct" type="checkbox" name="checkboxProduct">
+                                <label class="checkbox__label" for="checkboxProduct">Продукт</label>
+                            </div>
                       </div>
 
                       <div class="s-vacancy__category">
-                        <input type="checkbox" id="vacancies" name="vacancies">
-                        <label for="vacancies">Поледние вакансии</label>
+                          <div class="checkbox">
+                                <input class="checkbox__input" id="checkboxVacancies" type="checkbox" name="checkboxVacancies">
+                                <label class="checkbox__label" for="checkboxVacancies">Поледние вакансии</label>
+                            </div>
                       </div>
 
                       <p class="s-vacancy__additional">
